Bug 138116 - Wizards opened by an extension are too high.
Summary: Wizards opened by an extension are too high.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-10 17:13 UTC by Ilhan Yesil
Modified: 2021-02-09 12:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Extension opening large wizard (19.03 KB, application/zip)
2020-11-10 17:16 UTC, Ilhan Yesil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ilhan Yesil 2020-11-10 17:13:36 UTC
Description:
An extension can open a wizard dialog using the UNO API. As far as I can see, there is no way in the API to set a minimum size for the wizard. The wizards mininum size is very high, even if there is only some or none controls on the tabpage with a lot of unused place.

Steps to Reproduce:
1. Install attached sample extension, after the installation is done open the writer.
2. There is a new menu "Starter Project", in this menu press Action 1 or 2 (doesn't matter which)


Actual Results:
A wizard with too high sizes appears, especially the height of the wizard.

Expected Results:
Especially the height should be more accurate.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: 8db6290fbf80c4da993dd1138d6a848b4c9ea8db
CPU threads: 12; OS: Windows 10.0 Build 18362; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 Ilhan Yesil 2020-11-10 17:16:59 UTC
Created attachment 167177 [details]
Extension opening large wizard

Extension was compiled with jdk-11.0.7
Comment 2 Ilhan Yesil 2020-11-10 17:17:34 UTC
Self confirming according to https://wiki.documentfoundation.org/QA/Guidelines_for_public_and_private_sector_deployments. Issue has originally been reported by another user in our internal issue tracker.
Comment 3 Commit Notification 2020-11-16 14:58:21 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/502da85432ed195213268272dda966fddc269716

tdf#138116 Accurate minimal height for wizard opened by extension

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-11-30 12:43:32 UTC
Hello Ilhan Yesil,
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks
Comment 5 Xisco Faulí 2021-02-09 12:11:51 UTC
(In reply to Xisco Faulí from comment #4)
> Hello Ilhan Yesil,
> Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
> Otherwise, Could you please explain what's missing?
> Thanks

Closing...