tdf#138116 Accurate minimal height for wizard opened by extension

There is no way to set the minimum height by the UNO API.
Therefore the requested size will be reduced.

Change-Id: Ie657518a83ffb6873e4fd2a5640580b5198a38d2